force-app/main/default/objects/Payment_Plan_Detail__c/fields/Advanced_Payment_Receipt_Created__c.field-meta.xml
<CustomField>
    <fullName>Advanced_Payment_Receipt_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Advanced Payment Receipt Created</label>
    <type>Checkbox</type>
</CustomField>