force-app/main/default/objects/Payment_Plan_Detail__c/fields/After_Due_SLA_2__c.field-meta.xml
<CustomField>
    <fullName>After_Due_SLA_2__c</fullName>
    <formula>Cheque_Date__c + 14</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Due SLA 2</label>
    <type>Date</type>
</CustomField>