force-app/main/default/objects/Payment_Plan_Detail__c/fields/After_Due_SLA_3__c.field-meta.xml
<CustomField>
    <fullName>After_Due_SLA_3__c</fullName>
    <formula>Cheque_Date__c + 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>After Due SLA 3</label>
    <type>Date</type>
</CustomField>