force-app/main/default/objects/Payment_Plan_Detail__c/fields/AllCombinationKey__c.field-meta.xml
<CustomField>
    <fullName>AllCombinationKey__c</fullName>
    <externalId>true</externalId>
    <label>AllCombinationKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>