force-app/main/default/objects/Payment_Plan_Detail__c/fields/Amount_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Amount_in_Arabic__c</fullName>
    <label>Amount in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>