force-app/main/default/objects/Payment_Plan_Detail__c/fields/Amount_In_words__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_words__c</fullName>
    <description>This field is used to get the words for the amount</description>
    <label>Amount In words</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>