force-app/main/default/objects/Payment_Plan_Detail__c/fields/Amount_In_words_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Amount_In_words_Arabic__c</fullName>
    <description>This field is used to have the arabic wordings for the amount value</description>
    <label>Amount In words Arabic</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>