force-app/main/default/objects/Payment_Plan_Detail__c/fields/Amount_Paid_With_Total_Discount__c.field-meta.xml
<CustomField>
    <fullName>Amount_Paid_With_Total_Discount__c</fullName>
    <label>Amount Paid With Total Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>