force-app/main/default/objects/Payment_Plan_Detail__c/fields/Arabic_Description__c.field-meta.xml
<CustomField>
    <fullName>Arabic_Description__c</fullName>
    <label>Arabic Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>