force-app/main/default/objects/Payment_Plan_Detail__c/fields/ARR_Billed_Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>ARR_Billed_Deduction_Amount__c</fullName>
    <description>Used to deduct the billed amount from the Billed amount in the installment report.</description>
    <label>Billed Deduction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>