force-app/main/default/objects/Payment_Plan_Detail__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <label>Bank Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>ABN Amro Bank NV</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Commercial Bank</fullName>
            </value>
            <value>
                <fullName>Abu Dhabi Islamic Bank</fullName>
            </value>
            <value>
                <fullName>Ajman Bank</fullName>
            </value>
            <value>
                <fullName>Al Ahli Bank of Kuwait</fullName>
            </value>
            <value>
                <fullName>Al Hilal Bank</fullName>
            </value>
            <value>
                <fullName>Al Khaliji France</fullName>
            </value>
            <value>
                <fullName>Al Masraf Bank</fullName>
            </value>
            <value>
                <fullName>Al Rafidain Bank</fullName>
            </value>
            <value>
                <fullName>Arab African Intl Bank</fullName>
            </value>
            <value>
                <fullName>Arab Bank PLC</fullName>
            </value>
            <value>
                <fullName>Arab Bank Limited</fullName>
            </value>
            <value>
                <fullName>Arab Emirates Investment Bank</fullName>
            </value>
            <value>
                <fullName>Arab National Bank</fullName>
            </value>
            <value>
                <fullName>Banca Commercials Italiana</fullName>
            </value>
            <value>
                <fullName>Bank Melli Iran</fullName>
            </value>
            <value>
                <fullName>Bank of Baroda</fullName>
            </value>
            <value>
                <fullName>Bank of Sharjah</fullName>
            </value>
            <value>
                <fullName>Bank Saderat Iran</fullName>
            </value>
            <value>
                <fullName>Banque Du Caire</fullName>
            </value>
            <value>
                <fullName>Banque Banorabe</fullName>
            </value>
            <value>
                <fullName>Banque Libanaise Pour Le Comm.</fullName>
            </value>
            <value>
                <fullName>Barclays Bank</fullName>
            </value>
            <value>
                <fullName>BLC Bank</fullName>
            </value>
            <value>
                <fullName>Blom Bank France SA</fullName>
            </value>
            <value>
                <fullName>BNP Paribas Bank</fullName>
            </value>
            <value>
                <fullName>British Bank of the M.E.</fullName>
            </value>
            <value>
                <fullName>Calyon Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>