force-app/main/default/objects/Payment_Plan_Detail__c/fields/Base_Amount__c.field-meta.xml
<CustomField>
    <fullName>Base_Amount__c</fullName>
    <label>Base Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>