force-app/main/default/objects/Payment_Plan_Detail__c/fields/Base_Percent__c.field-meta.xml
<CustomField>
    <fullName>Base_Percent__c</fullName>
    <label>Base Percent</label>
    <precision>6</precision>
    <scale>3</scale>
    <type>Percent</type>
</CustomField>