force-app/main/default/objects/Payment_Plan_Detail__c/fields/Base_Percent_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Base_Percent_in_Arabic__c</fullName>
    <label>Base Percent in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>