force-app/main/default/objects/Payment_Plan_Detail__c/fields/Before_Due_SLA_1__c.field-meta.xml
<CustomField>
    <fullName>Before_Due_SLA_1__c</fullName>
    <formula>Cheque_Date__c  - 30</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Due SLA 1</label>
    <type>Date</type>
</CustomField>