force-app/main/default/objects/Payment_Plan_Detail__c/fields/Before_Due_SLA_3__c.field-meta.xml
<CustomField>
    <fullName>Before_Due_SLA_3__c</fullName>
    <formula>Cheque_Date__c - 7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Before Due SLA 3</label>
    <type>Date</type>
</CustomField>