force-app/main/default/objects/Payment_Plan_Detail__c/fields/Booking_Unit__c.field-meta.xml
<CustomField>
    <fullName>Booking_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking Unit</label>
    <referenceTo>Booking_Unit__c</referenceTo>
    <relationshipName>Payment_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>