force-app/main/default/objects/Payment_Plan_Detail__c/fields/Calculate_Balance_BF_Flag__c.field-meta.xml
<CustomField>
    <fullName>Calculate_Balance_BF_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calculate Balance BF Flag</label>
    <type>Checkbox</type>
</CustomField>