force-app/main/default/objects/Payment_Plan_Detail__c/fields/ChargeCodeName__c.field-meta.xml
<CustomField>
    <fullName>ChargeCodeName__c</fullName>
    <formula>Charge_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charge Code Name</label>
    <type>Text</type>
</CustomField>