force-app/main/default/objects/Payment_Plan_Detail__c/fields/Cheque_Date_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Date_Arabic__c</fullName>
    <label>Cheque Date Arabic</label>
    <length>40</length>
    <type>Text</type>
</CustomField>