force-app/main/default/objects/Payment_Plan_Detail__c/fields/Cheque_date_formatted_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Cheque_date_formatted_Arabic__c</fullName>
    <description>IF(ISPICKVAL(Installment_No__c, &apos;in01&apos;), &apos;بتاريخ التوقيع على نموذج الحجز هذا&apos;, 
IF(CONTAINS(Description__c, &apos;100&apos;),&apos; في تاريخ الانجاز&apos; + &apos; (&apos;+Cheque_Date_Arabic__c+&apos;)&apos;,  Cheque_Date_Arabic__c ))</description>
    <formula>IF(ISPICKVAL(Installment_No__c, &apos;in01&apos;), &apos;بتاريخ التوقيع على نموذج الحجز هذا&apos;, 
IF(CONTAINS(Description__c, &apos;100&apos;),&apos; في تاريخ الانجاز&apos; + &apos; ( التاريخ الاسنرشادي&apos;+Cheque_Date_Arabic__c+&apos;)&apos;,  Cheque_Date_Arabic__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Cheque date formatted Arabic</label>
    <type>Text</type>
</CustomField>