force-app/main/default/objects/Payment_Plan_Detail__c/fields/Cheque_No_in_Arabic__c.field-meta.xml
<CustomField>
    <fullName>Cheque_No_in_Arabic__c</fullName>
    <label>Cheque No in Arabic</label>
    <length>255</length>
    <type>Text</type>
</CustomField>