force-app/main/default/objects/Payment_Plan_Detail__c/fields/Cheque_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Cheque_Submitted_Date__c</fullName>
    <label>Cheque Submitted Date</label>
    <type>Date</type>
</CustomField>