force-app/main/default/objects/Payment_Plan_Detail__c/fields/Current_RERA_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Current_RERA_Percentage__c</fullName>
    <formula>IF(Inventory__c != null, Inventory__r.Property_Inv__r.RERA_Construction_Percent__c,  Booking_Unit__r.Inventory__r.Property_Inv__r.RERA_Construction_Percent__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current RERA Percentage</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>