force-app/main/default/objects/Payment_Plan_Detail__c/fields/Custom_Flag__c.field-meta.xml
<CustomField>
    <fullName>Custom_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Custom Flag</label>
    <type>Checkbox</type>
</CustomField>