force-app/main/default/objects/Payment_Plan_Detail__c/fields/Discount_Land_Bank__c.field-meta.xml
<CustomField>
    <fullName>Discount_Land_Bank__c</fullName>
    <label>Discount - Land Bank</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>