force-app/main/default/objects/Payment_Plan_Detail__c/fields/Due_Payment__c.field-meta.xml
<CustomField>
    <fullName>Due_Payment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Due Payment</label>
    <type>Checkbox</type>
</CustomField>