force-app/main/default/objects/Payment_Plan_Detail__c/fields/ERP_Billing_Line_Id__c.field-meta.xml
<CustomField>
    <fullName>ERP_Billing_Line_Id__c</fullName>
    <label>ERP Billing Line Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>