force-app/main/default/objects/Payment_Plan_Detail__c/fields/FA_Paid__c.field-meta.xml
<CustomField>
    <fullName>FA_Paid__c</fullName>
    <formula>Amount__c =  Amount_Paid__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Paid</label>
    <type>Checkbox</type>
</CustomField>