force-app/main/default/objects/Payment_Plan_Detail__c/fields/Handover_Date__c.field-meta.xml
<CustomField>
    <fullName>Handover_Date__c</fullName>
    <label>PHPP Date</label>
    <type>Date</type>
</CustomField>