force-app/main/default/objects/Payment_Plan_Detail__c/fields/Installment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Installment_Amount__c</fullName>
    <label>Installment Amount (AED)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>