force-app/main/default/objects/Payment_Plan_Detail__c/fields/Installment_No__c.field-meta.xml
<CustomField>
    <fullName>Installment_No__c</fullName>
    <label>Installment No</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN01</fullName>
                <label>in01</label>
            </value>
            <value>
                <fullName>IN02</fullName>
                <label>in02</label>
            </value>
            <value>
                <fullName>in03</fullName>
            </value>
            <value>
                <fullName>in04</fullName>
            </value>
            <value>
                <fullName>in05</fullName>
            </value>
            <value>
                <fullName>in06</fullName>
            </value>
            <value>
                <fullName>in07</fullName>
            </value>
            <value>
                <fullName>in08</fullName>
            </value>
            <value>
                <fullName>in09</fullName>
            </value>
            <value>
                <fullName>in10</fullName>
            </value>
            <value>
                <fullName>in11</fullName>
            </value>
            <value>
                <fullName>in12</fullName>
            </value>
            <value>
                <fullName>in13</fullName>
            </value>
            <value>
                <fullName>in14</fullName>
            </value>
            <value>
                <fullName>in15</fullName>
            </value>
            <value>
                <fullName>in16</fullName>
            </value>
            <value>
                <fullName>in17</fullName>
            </value>
            <value>
                <fullName>in18</fullName>
            </value>
            <value>
                <fullName>in19</fullName>
            </value>
            <value>
                <fullName>in20</fullName>
            </value>
            <value>
                <fullName>in21</fullName>
            </value>
            <value>
                <fullName>in22</fullName>
            </value>
            <value>
                <fullName>in23</fullName>
            </value>
            <value>
                <fullName>in24</fullName>
            </value>
            <value>
                <fullName>in25</fullName>
            </value>
            <value>
                <fullName>in26</fullName>
            </value>
            <value>
                <fullName>in27</fullName>
            </value>
            <value>
                <fullName>in28</fullName>
            </value>
            <value>
                <fullName>in29</fullName>
            </value>
            <value>
                <fullName>in30</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>