force-app/main/default/objects/Payment_Plan_Detail__c/fields/Installment_Type__c.field-meta.xml
<CustomField>
    <fullName>Installment_Type__c</fullName>
    <label>Installment Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>