force-app/main/default/objects/Payment_Plan_Detail__c/fields/Instalment_Description__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Description__c</fullName>
    <formula>&apos;Instalment&apos; + &apos; &apos; +  TEXT(Seq__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Instalment Description</label>
    <type>Text</type>
</CustomField>