force-app/main/default/objects/Payment_Plan_Detail__c/fields/Instalment_Type__c.field-meta.xml
<CustomField>
    <fullName>Instalment_Type__c</fullName>
    <label>Instalment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fixed Date</fullName>
            </value>
            <value>
                <fullName>Milestone</fullName>
            </value>
            <value>
                <fullName>Handover Event</fullName>
            </value>
            <value>
                <fullName>PHPP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>