force-app/main/default/objects/Payment_Plan_Detail__c/fields/Inventory__c.field-meta.xml
<CustomField>
    <fullName>Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory</label>
    <referenceTo>Inventory__c</referenceTo>
    <relationshipName>Payment_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>