force-app/main/default/objects/Payment_Plan_Detail__c/fields/Inventory_Name__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Name__c</fullName>
    <formula>Payment_Plan_Master__r.Property__r.Name</formula>
    <label>Inventory Name</label>
    <type>Text</type>
</CustomField>