force-app/main/default/objects/Payment_Plan_Detail__c/fields/Is_Handover_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Is_Handover_Cheque__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Handover Cheque</label>
    <type>Checkbox</type>
</CustomField>