force-app/main/default/objects/Payment_Plan_Detail__c/fields/Is_To_ApproveBy_CCO__c.field-meta.xml
<CustomField>
    <fullName>Is_To_ApproveBy_CCO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is to flag to get the approval from CCO or not</description>
    <label>Is To ApproveBy CCO</label>
    <type>Checkbox</type>
</CustomField>