force-app/main/default/objects/Payment_Plan_Detail__c/fields/Is_To_ApproveBy_CDO__c.field-meta.xml
<CustomField>
    <fullName>Is_To_ApproveBy_CDO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is To ApproveBy CDO</label>
    <type>Checkbox</type>
</CustomField>