force-app/main/default/objects/Payment_Plan_Detail__c/fields/IsPaymntWOCheq__c.field-meta.xml
<CustomField>
    <fullName>IsPaymntWOCheq__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is payment without cheque</label>
    <type>Checkbox</type>
</CustomField>