force-app/main/default/objects/Payment_Plan_Detail__c/fields/Land_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Land_SF_ID__c</fullName>
    <description>Not used anywhere. just used for dataloading and tracking</description>
    <label>Land SF ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>