force-app/main/default/objects/Payment_Plan_Detail__c/fields/LPF_Paid__c.field-meta.xml
<CustomField>
    <fullName>LPF_Paid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPF Paid</label>
    <type>Checkbox</type>
</CustomField>