force-app/main/default/objects/Payment_Plan_Detail__c/fields/LPF_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>LPF_Per_Day__c</fullName>
    <label>LPF Per Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>