force-app/main/default/objects/Payment_Plan_Detail__c/fields/LPF_Value_Per_Month__c.field-meta.xml
<CustomField>
    <fullName>LPF_Value_Per_Month__c</fullName>
    <label>LPF Value Per Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>