force-app/main/default/objects/Payment_Plan_Detail__c/fields/LPF_Waived__c.field-meta.xml
<CustomField>
    <fullName>LPF_Waived__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LPF Waived</label>
    <type>Checkbox</type>
</CustomField>