force-app/main/default/objects/Payment_Plan_Detail__c/fields/LPF_Waived_Amount__c.field-meta.xml
<CustomField>
    <fullName>LPF_Waived_Amount__c</fullName>
    <label>LPF Waived Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>