force-app/main/default/objects/Payment_Plan_Detail__c/fields/Main_Payment_Plan_Detail_Cheque_Date__c.field-meta.xml
<CustomField>
    <fullName>Main_Payment_Plan_Detail_Cheque_Date__c</fullName>
    <formula>Payment_Plan_Detail__r.Cheque_Date__c</formula>
    <label>Main Payment Plan Detail Cheque Date</label>
    <type>Date</type>
</CustomField>