force-app/main/default/objects/Payment_Plan_Detail__c/fields/Master_Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Master_Plan_Code__c</fullName>
    <label>Master Plan Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>