force-app/main/default/objects/Payment_Plan_Detail__c/fields/Meraas_SF_ID__c.field-meta.xml
<CustomField>
    <fullName>Meraas_SF_ID__c</fullName>
    <description>New Field for Meraas Migration</description>
    <externalId>true</externalId>
    <label>Meraas SF ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>