force-app/main/default/objects/Payment_Plan_Detail__c/fields/Migrated_Charge_Code__c.field-meta.xml
<CustomField>
    <fullName>Migrated_Charge_Code__c</fullName>
    <description>This field would be used to store the Nakheel Charge Code Values.</description>
    <label>Migrated Charge Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>