force-app/main/default/objects/Payment_Plan_Detail__c/fields/Milestone_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Completion_Date__c</fullName>
    <label>Milestone Completion Date</label>
    <type>Date</type>
</CustomField>