force-app/main/default/objects/Payment_Plan_Detail__c/fields/Milestone_Percent__c.field-meta.xml
<CustomField>
    <fullName>Milestone_Percent__c</fullName>
    <label>Milestone Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>