force-app/main/default/objects/Payment_Plan_Detail__c/fields/Months_After_Handover__c.field-meta.xml
<CustomField>
    <fullName>Months_After_Handover__c</fullName>
    <label>Months After Handover</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>