force-app/main/default/objects/Payment_Plan_Detail__c/fields/Name_on_Cheque__c.field-meta.xml
<CustomField>
    <fullName>Name_on_Cheque__c</fullName>
    <label>Name on Cheque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>