force-app/main/default/objects/Payment_Plan_Detail__c/fields/NewRemarkValue__c.field-meta.xml
<CustomField>
    <fullName>NewRemarkValue__c</fullName>
    <label>NewRemarkValue</label>
    <length>255</length>
    <type>Text</type>
</CustomField>