force-app/main/default/objects/Payment_Plan_Detail__c/fields/Opp_Late_Payment_status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Late_Payment_status__c</fullName>
    <label>Opp Late Payment status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Collection Case</fullName>
            </value>
            <value>
                <fullName>Over Due Notifications</fullName>
            </value>
            <value>
                <fullName>First Notice</fullName>
            </value>
            <value>
                <fullName>Second Notice</fullName>
            </value>
            <value>
                <fullName>Termination Case</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>