force-app/main/default/objects/Payment_Plan_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Resale Booking</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>Payment_Plan_Details2</relationshipName>
    <type>Lookup</type>
</CustomField>