force-app/main/default/objects/Payment_Plan_Detail__c/fields/Opportunity_Handover_Completed__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Handover_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opportunity Handover Completed</label>
    <type>Checkbox</type>
</CustomField>