force-app/main/default/objects/Payment_Plan_Detail__c/fields/Oracle_Migrated_Converted_to_SF__c.field-meta.xml
<CustomField>
    <fullName>Oracle_Migrated_Converted_to_SF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Oracle Migrated Converted to SF</label>
    <type>Checkbox</type>
</CustomField>