force-app/main/default/objects/Payment_Plan_Detail__c/fields/Payment_Plan_Detail__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Plan Detail</label>
    <referenceTo>Payment_Plan_Detail__c</referenceTo>
    <relationshipName>Payment_Plan_Details</relationshipName>
    <type>Lookup</type>
</CustomField>