force-app/main/default/objects/Payment_Plan_Detail__c/fields/Payment_Plan_Master_Name__c.field-meta.xml
<CustomField>
    <fullName>Payment_Plan_Master_Name__c</fullName>
    <formula>Payment_Plan_Master__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Plan Master Name</label>
    <type>Text</type>
</CustomField>