force-app/main/default/objects/Payment_Plan_Detail__c/fields/Plan_Code__c.field-meta.xml
<CustomField>
    <fullName>Plan_Code__c</fullName>
    <externalId>true</externalId>
    <label>Plan Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>