force-app/main/default/objects/Payment_Plan_Detail__c/fields/Planned_Billed_Month__c.field-meta.xml
<CustomField>
    <fullName>Planned_Billed_Month__c</fullName>
    <label>Planned Billed Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>