force-app/main/default/objects/Payment_Plan_Detail__c/fields/PPD_Date__c.field-meta.xml
<CustomField>
    <fullName>PPD_Date__c</fullName>
    <formula>IF( NOT( ISBLANK(SOA_Invoice_Date__c)) , SOA_Invoice_Date__c, Cheque_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PPD Date</label>
    <type>Date</type>
</CustomField>